fixed z-index on nav-bar

--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ a {
   background: #F6F6F6;
   position: sticky;
   opacity: 0.7;
+  z-index: 2;
 }
 .navigation nav {
   padding-top: 20px;
@@ -224,6 +225,7 @@ footer {
   height: auto;
   border-radius: 10px;
   animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  z-index: 1;
 }
 @media (max-width: 500px) {
   .home .intro img {
