--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,7 @@
         img {
             .imgSize(100%, auto, 10px);
             animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+            z-index: 1;
 
             @media @phone {
                 padding: 0 2px;
