--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,7 @@
     background: @nav-bg;
     position: sticky;
     opacity: .7;
+    z-index: 2;
 
     nav {
         padding-top: 20px;
